<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:background="@color/white">
    <ImageView android:layout_height="wrap_content" android:id="@+id/imageView1" android:layout_width="wrap_content" android:src="@drawable/colgate_q2" android:layout_weight="0"></ImageView>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_weight="0">
        <Button android:layout_height="wrap_content" android:id="@+id/button1_p3" android:layout_width="wrap_content" android:text="@string/p3_w1" android:background="@drawable/red_button" android:width="140pt"></Button>
        <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  "></TextView>
        <Button android:id="@+id/button4_p3" android:layout_width="wrap_content" android:text="@string/p2_w4" android:background="@drawable/red_button" android:layout_height="fill_parent" android:width="140pt"></Button>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:id="@+id/textView6" android:layout_weight="0" android:layout_height="2pt"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout3" android:gravity="center_horizontal" android:layout_weight="0">
        <Button android:id="@+id/button2_p3" android:layout_width="wrap_content" android:text="@string/p3_w2" android:background="@drawable/red_button" android:layout_height="fill_parent" android:width="140pt"></Button>
        <TextView android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  "></TextView>
        <Button android:id="@+id/button5_p3" android:layout_width="wrap_content" android:text="@string/p3_w5" android:background="@drawable/red_button" android:layout_height="wrap_content" android:width="140pt"></Button>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:id="@+id/textView7" android:layout_height="2pt"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="top|center_horizontal" android:id="@+id/linearLayout4" android:layout_weight="0">
        <Button android:id="@+id/button6_p3" android:background="@drawable/red_button" android:text="@string/p3_w6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:width="140pt"></Button>
        <TextView android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  "></TextView>
        <Button android:id="@+id/button3_p3" android:background="@drawable/red_button" android:text="@string/p3_w3" android:layout_width="wrap_content" android:layout_height="fill_parent" android:width="140pt"></Button>
    </LinearLayout>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView2" android:layout_weight="1"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout1">
        <Button android:layout_height="wrap_content" android:id="@+id/button_p3_clr" android:layout_width="wrap_content" android:layout_gravity="right" android:text="@string/p1_back" android:background="@drawable/full_red_button" android:textColor="@color/white" android:textStyle="bold" android:width="80pt"></Button>
        <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"></TextView>
        <Button android:layout_height="wrap_content" android:id="@+id/button_p3_subm" android:text="@string/p2_sbm" android:layout_width="wrap_content" android:background="@drawable/full_red_button" android:textColor="@color/white" android:textStyle="bold" android:width="80pt"></Button>
    </LinearLayout>
    
</LinearLayout>
