<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:background="#FFFFFF">
    <ImageView android:layout_height="wrap_content" android:id="@+id/imageView1" android:layout_width="wrap_content" android:src="@drawable/colgate_q3" android:layout_weight="0"></ImageView>
    <TextView android:layout_width="wrap_content" android:id="@+id/textView4" android:layout_height="wrap_content" android:layout_weight="1"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:gravity="center_horizontal">
        <Button android:id="@+id/button1_p4" android:layout_width="wrap_content" android:text="@string/p4_w1" android:background="@drawable/red_button" android:width="100pt" android:layout_height="fill_parent"></Button>
        <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  "></TextView>
        <Button android:layout_height="wrap_content" android:id="@+id/button2_p4" android:layout_width="wrap_content" android:text="@string/p4_w2" android:background="@drawable/red_button" android:width="100pt"></Button>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_weight="0" android:id="@+id/textView2" android:layout_height="3pt"></TextView>
    <Button android:id="@+id/button3_p4" android:layout_width="wrap_content" android:layout_gravity="center_horizontal" android:text="@string/p4_w3" android:background="@drawable/red_button" android:layout_height="53dp" android:width="100pt"></Button>
    <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="2"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout2">
        <Button android:layout_height="wrap_content" android:id="@+id/button_p4_clr" android:layout_width="wrap_content" android:text="@string/p1_back" android:background="@drawable/full_red_button" android:textColor="@color/white" android:textStyle="bold" android:width="80pt"></Button>
    </LinearLayout>
    
</LinearLayout>
